force-app/main/default/objects/WorkExperience__c/fields/CompanyLogo__c.field-meta.xml
<CustomField>
    <fullName>CompanyLogo__c</fullName>
    <formula>CASE(ImageURL__c, 
&quot;eei.png&quot;, IMAGE(&quot;/resource/PortfolioAssets/PortfolioAssets/Company/&quot; + ImageURL__c , &quot;company&quot;, 200, 200), 
&quot;accenture_white.png&quot;, IMAGE(&quot;/resource/PortfolioAssets/PortfolioAssets/Company/&quot; + ImageURL__c , &quot;company&quot;, 200, 400),
&quot;cloudstaff_white.png&quot;, IMAGE(&quot;/resource/PortfolioAssets/PortfolioAssets/Company/&quot; + ImageURL__c , &quot;company&quot;, 200, 200),
IMAGE(&quot;/resource/PortfolioAssets/PortfolioAssets/Company/&quot; + ImageURL__c , &quot;company&quot;, 100, 100))</formula>
    <label>Company Logo</label>
    <type>Text</type>
</CustomField>