force-app/main/default/objects/WorkExperience__c/fields/Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack__c</fullName>
    <label>Tech Stack</label>
    <type>TextArea</type>
</CustomField>